--- a/hardware/cpu/self.org
+++ b/hardware/cpu/self.org
@@ -12,4 +12,13 @@
   - used for
     - real time processing (DSPs)
     - low-power applications
+
+- Gigatron
+  - https://gigatron.io/
+  - https://en.wikipedia.org/wiki/Gigatron_TTL
+    - 8-bit
+    - 6502
+  - https://www.youtube.com/watch?v=rbaAmnhZAis
+
 - http://www.homebrewcpu.com/
+- homebrew https://www.youtube.com/@fabianschuiki/playlists
