--- a/hardware/logic/7400.org
+++ b/hardware/logic/7400.org
@@ -28,40 +28,46 @@ https://en.wikipedia.org/wiki/List_of_7400-series_integrated_circuits
 - Some are revisions of previous ones with re-arranged pinouts.
   eg: x244 to x640
 
-|-----+---+----------------------------------------+----|
-|  LS | U | description                            | O  |
-|-----+---+----------------------------------------+----|
-|   0 | 4 | 2-input NAND gate                      | -  |
-|   4 | 6 | NOT gate                               | -  |
-|   5 | 6 | NOT gate                               | OC |
-|   7 | 6 | buffer gate (ttl -> mos)               | OC |
-|   8 | 4 | 2-input AND gate                       | -  |
-|  14 | 6 | NOT gate                               | -  |
-|  16 | 6 | NOT gate                               | OC |
-|  20 | 2 | 4-input NAND gate                      | -  |
-|  30 | 1 | 8-input NAND gate                      | -  |
-|  32 | 4 | 2-input OR gate                        | -  |
-|  74 | 2 | D positive edge triggered flip-flop    |    |
-|  76 | 2 | J-K flip flops                         | -  |
-|  86 | 4 | 2-input XOR gate                       | -  |
-| 125 | 4 | bus buffer                             | 3S |
-| 138 | 1 | 3-to-8 decoder/multiplexer             | -  |
-| 139 | 2 | 2-to-4 decoder/multiplexer             | -  |
-| 151 | 1 | 8-input selector/multiplexer           | -  |
-| 157 | 4 | 2-line  selector/multiplexers          | -  |
-| 161 | 1 | 4-bit binary counters                  | -  |
-| 164 | 1 | 8-bit SIPO =shift register=            | -  |
-| 173 | 4 | D register/flip-flop (+ 2 OE)          |    |
-| 174 | 6 | D register/flip-flop                   | -  |
-| 189 | 1 | 64-bit RAM                             | 3S |
-| [[https://learn.adafruit.com/digital-circuits-6-eprom-emulator/the-74244-octal-tristate-buffer][240]] | 8 | buffer (+ 2 OE)                        | 3S |
-| [[https://www.youtube.com/watch?v=itsdKuu7vBU][244]] | 8 | buffer (+ 2 OE)                        | 3S |
-| 245 | 8 | bus transceiver                        | 3S |
-| 251 | 2 | 8-line to 1-line selector/multiplexer  | 3S |
-| 259 | 1 | 8-bit addressable input latch with clr | -  |
-| 283 | 1 | 4-bit binary full adder, with carry    | -  |
-| 373 | 8 | transparent latch                      | 3S |
-| 374 | 8 | positive-edge-triggered flip-flops     | 3S |
-| 573 | 1 | D transparent latch                    | 3S |
-| 595 | 1 | 8-bit shift register                   | 3S |
-|-----+---+----------------------------------------+----|
+|-----+---+----+--------------------------------------------|
+|  LS | U | O  | description                                |
+|-----+---+----+--------------------------------------------|
+|   0 | 4 | -  | 2-input NAND gate                          |
+|   4 | 6 | -  | NOT gate                                   |
+|   5 | 6 | OC | NOT gate                                   |
+|   7 | 6 | OC | buffer gate (ttl -> mos)                   |
+|   8 | 4 | -  | 2-input AND gate                           |
+|  14 | 6 | -  | NOT gate                                   |
+|  16 | 6 | OC | NOT gate                                   |
+|  20 | 2 | -  | 4-input NAND gate                          |
+|  30 | 1 | -  | 8-input NAND gate                          |
+|  32 | 4 | -  | 2-input OR gate                            |
+|  47 | 1 | OC | BCD to 7-segment                           |
+|  74 | 2 | -  | D positive edge triggered flip-flop        |
+|  76 | 2 | -  | J-K flip flops                             |
+|  86 | 4 | -  | 2-input XOR gate                           |
+| 123 | 2 | -  | retrigger monostable multivibrator + clear |
+| 125 | 4 | 3S | bus b uffer                                |
+| 138 | 1 | -  | 3-to-8 decoder/multiplexer                 |
+| [[https://www.youtube.com/watch?v=XbjPywRIeDY][139]] | 2 | -  | 2-to-4 decoder/multiplexer       |
+| 151 | 1 | -  | 8-input selector/multiplexer               |
+| 157 | 4 | -  | 2-line  selector/multiplexers              |
+| 161 | 1 | -  | 4-bit binary counters                      |
+| 164 | 1 | -  | 8-bit SIPO =shift register=                |
+| 173 | 4 | 3S | D register                                 |
+| 174 | 6 | -  | D flip-flop with clear                     |
+| 189 | 1 | 3S | 64-bit RAM                                 |
+| [[https://learn.adafruit.com/digital-circuits-6-eprom-emulator/the-74244-octal-tristate-buffer][240]] | 8 | 3S | buffer                                     |
+| [[https://www.youtube.com/watch?v=itsdKuu7vBU][244]] | 8 | 3S | buffer                                     |
+| 245 | 8 | 3S | bus transceiver                            |
+| 251 | 2 | 3S | 8-line to 1-line selector/multiplexer      |
+| 259 | 1 | -  | 8-bit addressable input latch with clr     |
+| 283 | 1 | -  | 4-bit binary full adder, with carry        |
+| 373 | 8 | 3S | transparent latch                          |
+| 374 | 8 | 3S | positive-edge-triggered flip-flops         |
+| 573 | 1 | 3S | D transparent latch                        |
+| 595 | 1 | 3S | 8-bit shift register                       |
+|-----+---+----+--------------------------------------------|
+
+- multiplexers
+  - used for memory decoding (to enable chips based on address bits)
+  - the ENABLE pin could be used as an extra address decoding bit
