--- a/hardware/cpu/8/6502/self.org
+++ b/hardware/cpu/8/6502/self.org
@@ -15,6 +15,7 @@
 - opcodes http://www.6502.org/tutorials/6502opcodes.html
 - web emulator https://github.com/skilldrick/6502js
 - game: snake https://gist.github.com/wkjagt/9043907
+- assembler http://sun.hasenbraten.de/vasm/
 
 - Products
   - Apple IIe
