--- a/hardware/cpu/self.org
+++ b/hardware/cpu/self.org
@@ -13,12 +13,15 @@
     - real time processing (DSPs)
     - low-power applications
 
-- Gigatron
-  - https://gigatron.io/
-  - https://en.wikipedia.org/wiki/Gigatron_TTL
-    - 8-bit
-    - 6502
-  - https://www.youtube.com/watch?v=rbaAmnhZAis
+- 1 bit
+  - https://laughtonelectronics.com/oldsite/arcana/One-bit%20computer.html
+
+- Video: 486 breakout board https://www.youtube.com/watch?v=wSiDSdHS2QQ
+  - 1989 Intel
+  - 8Mhz should be the min speed that could run
+  - Manual clock does NOT work
+  - From the comments
+    - internal cache refresh times might limit the min clock speed you could have
 
 - http://www.homebrewcpu.com/
 - homebrew https://www.youtube.com/@fabianschuiki/playlists
